--- a/paper/sections/kfacs.tex
+++ b/paper/sections/kfacs.tex
@@ -170,7 +170,7 @@ Using the crude approximation $\sum_{m=1}^M \mA_m\sum_{m=1}^M \mB_m \approx \sum
 \end{align}
 which gives the approximation
 \begin{tcolorbox}[colframe=kfac, title={KFAC with general PDE terms},bottom=0mm,top=0mm,middle=0mm]
-\begin{align*}\label{eq:KFAC-PINNs-general}
+\begin{align*}\label{eq:KFAC-PINNs-general-app}
     \hat{\mG}%^{\textup{exp}}
     (\mW^{(l)})
     \coloneqq \frac{1}{N^2\binom{d+k}{d} }
